fix for avatar positioning and z-index on safari

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,5 +16,6 @@
     transform: rotateY(180deg);
     -webkit-transform: rotateY(180deg); /* Safari and Chrome */
     -moz-transform: rotateY(180deg); /* Firefox */
+    -webkit-transform: translate3d(0, 0, 200px);
   }
 }
