--- a/src/components/WaterCooler/WaterCooler.scss
+++ b/src/components/WaterCooler/WaterCooler.scss
@@ -44,6 +44,7 @@
   .map-image-container {
     height: 700px;
     width: 1480px;
+    position: relative;
   }
   .bottom {
     justify-content: space-between;
